force-app/main/default/objects/loan__Trigger_Parameters__c/loan__Trigger_Parameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trigger Parameters</label>
</CustomObject>