force-app/main/default/objects/loan__Trigger_Parameters__c/fields/loan__Disable_broker_commission_plan__c.field-meta.xml
<CustomField>
    <fullName>loan__Disable_broker_commission_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable broker_populate_commission_plan trigger</description>
    <inlineHelpText>Check this to disable broker populate commission plan trigger</inlineHelpText>
    <label>Disable_broker_populate_commission_plan</label>
    <type>Checkbox</type>
</CustomField>