force-app/main/default/objects/loan__Trigger_Parameters__c/fields/loan__Disable_Loan_Account_Trigger__c.field-meta.xml
<CustomField>
    <fullName>loan__Disable_Loan_Account_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to disable loan account trigger</inlineHelpText>
    <label>Disable Loan Account Trigger</label>
    <type>Checkbox</type>
</CustomField>