force-app/main/default/objects/loan__Trigger_Parameters__c/fields/loan__Disable_PostRpmtAccBalUpd_Trigger__c.field-meta.xml
<CustomField>
    <fullName>loan__Disable_PostRpmtAccBalUpd_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to disable post repayment account balance trigger</inlineHelpText>
    <label>Disable Post Rpmt Acc Balance Trigger</label>
    <type>Checkbox</type>
</CustomField>