force-app/main/default/objects/loan__Trigger_Parameters__c/fields/loan__Disable_Rpmt_Schedule_Trigger__c.field-meta.xml
<CustomField>
    <fullName>loan__Disable_Rpmt_Schedule_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to disable repayment schedule trigger</inlineHelpText>
    <label>Disable Repmt Schedule Trigger</label>
    <type>Checkbox</type>
</CustomField>